# cpp20-modules-sandbox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SAMPLES.md
docs/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/sampleapp/: CMakeLists.txt
src/sampleapp/01_hello/: demo_hello.cpp  hello.cppm
src/sampleapp/02_partitions/: demo_math.cpp  math-advanced.cppm  math-basic.cppm  math.cppm
src/sampleapp/03_interop/: demo_interop.cpp  legacy.h  modern.cppm
src/sampleapp/04_library/: demo_library.cpp  string_utils-impl.cpp  string_utils.cppm
test/: CMakeLists.txt
test/unit/sampleapp/: CMakeLists.txt  dummy_test.cpp  test_hello.cpp  test_math.cpp  test_modern.cpp  test_string_utils.cpp
